add cess variables

--- a/index.html
+++ b/index.html
@@ -7,7 +7,5 @@
       <link rel="stylesheet" href="./style.css" />
       <title>Portfolio</title>
    </head>
-   <body>
-      body
-   </body>
+   <body></body>
 </html>
