--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
       <link rel="stylesheet" href="./style.css" />
       <title>Portfolio</title>
    </head>
-   <body></body>
+   <body>
+      <header>
+         <nav class="nav bd-container">
+            <ul class="menu flex">
+               <li><a href="#">home</a></li>
+               <li><a href="#">projects</a></li>
+               <li><a href="#">tools</a></li>
+            </ul>
+         </nav>
+      </header>
+   </body>
 </html>
