--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
             </ul>
          </nav>
       </header>
+
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+         AOS.init();
+      </script>
    </body>
 </html>
