--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="./style.css" />
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      />
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+      <script defer src="main.js"></script>
+      <script src="anim.js"></script>
       <title>Portfolio</title>
    </head>
    <body>
@@ -17,6 +24,30 @@
             </ul>
          </nav>
       </header>
+
+      <main class="main section">
+         <div class="main_container bd-container flex">
+            <div class="anim_container">
+               <div class="anim" id="anim"></div>
+               <script src="script.js"></script>
+            </div>
+            <div class="contact">
+               <h1>Hello, I'm Chris</h1>
+               <div class="contact-details">
+                  <p>Email: <span>Chris.Geresus@gmail.com</span></p>
+                  <p>Phone: <span>(548)482-5364</span></p>
+                  <p>
+                     GitHub:
+                     <span
+                        ><a href="https://github.com/Tcodingg" target="_blank"
+                           >Link</a
+                        ></span
+                     >
+                  </p>
+               </div>
+            </div>
+         </div>
+      </main>
 
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script>
