add projects section and style it

--- a/index.html
+++ b/index.html
@@ -49,6 +49,32 @@
          </div>
       </main>
 
+      <section class="projects section">
+         <article class="projects-container bd-container" id="projects">
+            <h1 class="title">projects</h1>
+            <div class="projects-content flex">
+               <div class="projects-content-left">
+                  <img src="./images//breakfast.png" alt="" />
+               </div>
+               <div class="projects-content-right">
+                  <hi class="sub-title">sub title</hi>
+                  <p class="text">
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                     Eum voluptates velit cumque consequuntur exercitationem
+                     amet autem distinctio, neque fugiat sapiente.
+                  </p>
+                  <ul class="tech-used">
+                     <li>React</li>
+                     <li>React</li>
+                     <li>React</li>
+                     <li>React</li>
+                     <li>React</li>
+                  </ul>
+               </div>
+            </div>
+         </article>
+      </section>
+
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script>
          AOS.init();
