add project images and create tools section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,48 @@
             <h1 class="title">projects</h1>
             <div class="projects-content flex">
                <div class="projects-content-left">
-                  <img src="./images//breakfast.png" alt="" />
+                  <img src="./images/irun.png" alt="" />
+               </div>
+               <div class="projects-content-right">
+                  <hi class="sub-title">sub title</hi>
+                  <p class="text">
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                     Eum voluptates velit cumque consequuntur exercitationem
+                     amet autem distinctio, neque fugiat sapiente.
+                  </p>
+                  <ul class="tech-used">
+                     <li>React</li>
+                     <li>React</li>
+                     <li>React</li>
+                     <li>React</li>
+                     <li>React</li>
+                  </ul>
+               </div>
+            </div>
+
+            <div class="projects-content section flex">
+               <div class="projects-content-left">
+                  <img src="./images/g5mouse.png" alt="" />
+               </div>
+               <div class="projects-content-right">
+                  <hi class="sub-title">sub title</hi>
+                  <p class="text">
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                     Eum voluptates velit cumque consequuntur exercitationem
+                     amet autem distinctio, neque fugiat sapiente.
+                  </p>
+                  <ul class="tech-used">
+                     <li>React</li>
+                     <li>React</li>
+                     <li>React</li>
+                     <li>React</li>
+                     <li>React</li>
+                  </ul>
+               </div>
+            </div>
+            <div class="projects-content section flex">
+               <div class="projects-content-left">
+                  <img src="./images/portfolio.png" alt="" />
                </div>
                <div class="projects-content-right">
                   <hi class="sub-title">sub title</hi>
@@ -74,6 +115,16 @@
             </div>
          </article>
       </section>
+
+      <section class="tools section">
+         <article class="tools-container bd-container" id="tools">
+            <h1 class="title">tools</h1>
+         </article>
+      </section>
+
+      <div class="tools section">
+         <div class="tools-container bd-container"></div>
+      </div>
 
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script>
