add all the logos and style them

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
       <script defer src="main.js"></script>
       <script src="anim.js"></script>
-      <title>Portfolio</title>
+      <title>Chris's Portfolio</title>
    </head>
    <body>
       <header>
@@ -119,12 +119,55 @@
       <section class="tools section">
          <article class="tools-container bd-container" id="tools">
             <h1 class="title">tools</h1>
+            <div class="tools-wrapper grid">
+               <div class="logs-container">
+                  <img src="/images/logos/html5.svg" alt="" />
+                  <p>HTML</p>
+               </div>
+               <div class="logs-container">
+                  <img src="/images/logos/css3.svg" alt="" />
+                  <p>CSS</p>
+               </div>
+               <div class="logs-container">
+                  <img src="/images/logos/sass.svg" alt="" />
+                  <p>SASS</p>
+               </div>
+               <div class="logs-container">
+                  <img src="/images/logos/javascript.svg" alt="" />
+                  <p>JavaScript</p>
+               </div>
+               <div class="logs-container">
+                  <img src="/images/logos/typescript.svg" alt="" />
+                  <p>TypeScript</p>
+               </div>
+               <div class="logs-container">
+                  <img src="/images/logos/react-original.svg" alt="" />
+                  <p>React</p>
+               </div>
+               <div class="logs-container">
+                  <img src="/images/logos/redux.svg" alt="" />
+                  <p>Redux</p>
+               </div>
+               <div class="logs-container">
+                  <img src="/images/logos/nodejs.svg" alt="" />
+                  <p>NodeJs</p>
+               </div>
+               <div class="logs-container">
+                  <img src="/images/logos/mongodb.svg" alt="" />
+                  <p>MongoDB</p>
+               </div>
+
+               <div class="logs-container">
+                  <img src="/images/logos/express.png" alt="" />
+                  <p>Express</p>
+               </div>
+               <div class="logs-container">
+                  <img src="/images/logos/npm.png" alt="" />
+                  <p>NPM</p>
+               </div>
+            </div>
          </article>
       </section>
-
-      <div class="tools section">
-         <div class="tools-container bd-container"></div>
-      </div>
 
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script>
