add techs used for every project

--- a/index.html
+++ b/index.html
@@ -57,18 +57,23 @@
                   <img src="./images/irun.png" alt="" />
                </div>
                <div class="projects-content-right">
-                  <hi class="sub-title">sub title</hi>
+                  <hi class="sub-title">iRun</hi>
                   <p class="text">
                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                      Eum voluptates velit cumque consequuntur exercitationem
                      amet autem distinctio, neque fugiat sapiente.
                   </p>
                   <ul class="tech-used">
+                     <li>TypeScript</li>
+                     <li>Node</li>
+                     <li>Express</li>
+                     <li>MongoDB</li>
+                     <li>Jwt</li>
                      <li>React</li>
-                     <li>React</li>
-                     <li>React</li>
-                     <li>React</li>
-                     <li>React</li>
+                     <li>Redux</li>
+                     <li>HTML</li>
+                     <li>SCSS</li>
+                     <li>JavaScript</li>
                   </ul>
                </div>
             </div>
@@ -78,7 +83,7 @@
                   <img src="./images/g5mouse.png" alt="" />
                </div>
                <div class="projects-content-right">
-                  <hi class="sub-title">sub title</hi>
+                  <hi class="sub-title">G502 Hero</hi>
                   <p class="text">
                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                      Eum voluptates velit cumque consequuntur exercitationem
@@ -86,10 +91,9 @@
                   </p>
                   <ul class="tech-used">
                      <li>React</li>
-                     <li>React</li>
-                     <li>React</li>
-                     <li>React</li>
-                     <li>React</li>
+                     <li>JavaScript</li>
+                     <li>HTML</li>
+                     <li>SCSS</li>
                   </ul>
                </div>
             </div>
@@ -98,18 +102,16 @@
                   <img src="./images/portfolio.png" alt="" />
                </div>
                <div class="projects-content-right">
-                  <hi class="sub-title">sub title</hi>
+                  <hi class="sub-title">Portfolio</hi>
                   <p class="text">
                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                      Eum voluptates velit cumque consequuntur exercitationem
                      amet autem distinctio, neque fugiat sapiente.
                   </p>
                   <ul class="tech-used">
-                     <li>React</li>
-                     <li>React</li>
-                     <li>React</li>
-                     <li>React</li>
-                     <li>React</li>
+                     <li>HTML</li>
+                     <li>CSS</li>
+                     <li>JavaScript</li>
                   </ul>
                </div>
             </div>
