--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                </div>
 
                <div class="logs-container">
-                  <img src="/images/logos/express.png" alt="" />
+                  <img src="/images/logos/Express.svg" alt="" />
                   <p>Express</p>
                </div>
                <div class="logs-container">
