add projects summery

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
                <div class="projects-content-right">
                   <hi class="sub-title">iRun</hi>
                   <p class="text">
-                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                     Eum voluptates velit cumque consequuntur exercitationem
-                     amet autem distinctio, neque fugiat sapiente.
+                     Full-stack E-commerce application with authentication and
+                     authorization. Users can register, login and logout, add
+                     and remove items from cart, increase and decrease number of
+                     quantities, and able to checkout if they are logged in. Use
+                     “email: user@gmail.com, password: password” to try it out.
                   </p>
                   <ul class="tech-used">
                      <li>TypeScript</li>
@@ -85,9 +87,9 @@
                <div class="projects-content-right">
                   <hi class="sub-title">G502 Hero</hi>
                   <p class="text">
-                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                     Eum voluptates velit cumque consequuntur exercitationem
-                     amet autem distinctio, neque fugiat sapiente.
+                     A single landing page site with a form. Validates user’s
+                     input values while they are typing or when they click
+                     submit.
                   </p>
                   <ul class="tech-used">
                      <li>React</li>
@@ -104,9 +106,9 @@
                <div class="projects-content-right">
                   <hi class="sub-title">Portfolio</hi>
                   <p class="text">
-                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                     Eum voluptates velit cumque consequuntur exercitationem
-                     amet autem distinctio, neque fugiat sapiente.
+                     A responsive single page app that showcases some of my
+                     projects. If you would like to see more projects, please
+                     check out my GitHub.
                   </p>
                   <ul class="tech-used">
                      <li>HTML</li>
