add links for all projects

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                      Full-stack E-commerce application with authentication and
                      authorization. Users can register, login and logout, add
                      and remove items from cart, increase and decrease number of
-                     quantities, and able to checkout if they are logged in. Use
-                     “email: user@gmail.com, password: password” to try it out.
+                     quantities, and able to checkout if they are logged in. Try
+                     it out! “email: user@gmail.com, password: password” .
                   </p>
                   <ul class="tech-used">
                      <li>TypeScript</li>
@@ -77,6 +77,16 @@
                      <li>SCSS</li>
                      <li>JavaScript</li>
                   </ul>
+                  <div class="link">
+                     <a
+                        href="https://github.com/Tcodingg/irun_ecom_project"
+                        target="_blank"
+                        ><i class="fa fa-github" aria-hidden="true"></i
+                     ></a>
+                     <a href="https://onlynike.netlify.app/" target="_blank"
+                        ><i class="fa fa-external-link" aria-hidden="true"></i
+                     ></a>
+                  </div>
                </div>
             </div>
 
@@ -97,6 +107,16 @@
                      <li>HTML</li>
                      <li>SCSS</li>
                   </ul>
+                  <div class="link">
+                     <a
+                        href="https://github.com/Tcodingg/techgear"
+                        target="_blank"
+                        ><i class="fa fa-github" aria-hidden="true"></i
+                     ></a>
+                     <a href="https://onlytechz.netlify.app/" target="_blank"
+                        ><i class="fa fa-external-link" aria-hidden="true"></i
+                     ></a>
+                  </div>
                </div>
             </div>
             <div class="projects-content flex">
@@ -115,6 +135,18 @@
                      <li>CSS</li>
                      <li>JavaScript</li>
                   </ul>
+                  <div class="link">
+                     <a
+                        href="https://github.com/Tcodingg/portfolio"
+                        target="_blank"
+                        ><i class="fa fa-github" aria-hidden="true"></i
+                     ></a>
+                     <a
+                        href="https://chrisproejcts.netlify.app/"
+                        target="_blank"
+                        ><i class="fa fa-external-link" aria-hidden="true"></i
+                     ></a>
+                  </div>
                </div>
             </div>
          </div>
