--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         ><i class="fa fa-github" aria-hidden="true"></i
                      ></a>
                      <a
-                        href="https://chrisproejcts.netlify.app/"
+                        href="https://chrisprojects.netlify.app/"
                         target="_blank"
                         ><i class="fa fa-external-link" aria-hidden="true"></i
                      ></a>
