add the climax app

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                <h1>Hello, I'm Chris</h1>
                <div class="contact-details">
                   <p>Email: <span>Chris.Geresus@gmail.com</span></p>
-                  <p>Phone: <span>(548)482-5364</span></p>
+                  <p>Phone: <span>(226)505-9019</span></p>
                   <p>
                      GitHub:
                      <span
@@ -121,28 +121,34 @@
             </div>
             <div class="projects-content flex">
                <div class="projects-content-left">
-                  <img src="./images/portfolio.png" alt="" />
+                  <img src="./images/climax.png" alt="" />
                </div>
                <div class="projects-content-right">
                   <hi class="sub-title">Portfolio</hi>
                   <p class="text">
-                     A responsive single page app that showcases some of my
-                     projects. If you would like to see more projects, please
-                     check out my GitHub.
+                     A responsive movie app that fetches data from an API. Users
+                     can search and play trailers. If you would like to see more
+                     projects, please check out my GitHub.
                   </p>
                   <ul class="tech-used">
+                     <li>API</li>
+                     <li>TypeScript</li>
+                     <li>React</li>
+                     <li>Redux-Thunk</li>
+                     <li>Axios</li>
+                     <li>React-Router</li>
                      <li>HTML</li>
-                     <li>CSS</li>
-                     <li>JavaScript</li>
+                     <li>SASS</li>
+                     <li>JavaScript ES6+</li>
                   </ul>
                   <div class="link">
                      <a
-                        href="https://github.com/Tcodingg/portfolio"
+                        href="https://github.com/Tcodingg/climax"
                         target="_blank"
                         ><i class="fa fa-github" aria-hidden="true"></i
                      ></a>
                      <a
-                        href="https://chrisprojects.netlify.app/"
+                        href="https://climax-movie-app.netlify.app/"
                         target="_blank"
                         ><i class="fa fa-external-link" aria-hidden="true"></i
                      ></a>
