update project title

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   <img src="./images/climax.png" alt="" />
                </div>
                <div class="projects-content-right">
-                  <hi class="sub-title">Portfolio</hi>
+                  <hi class="sub-title">Climax</hi>
                   <p class="text">
                      A responsive movie app that fetches data from an API. Users
                      can search and play trailers. If you would like to see more
